{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 279,
  "lineage": "7957ea5c-e45b-0f4a-faad-954087c1167f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-26T14:21:21.013-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metal-direction-333819/global/firewalls/app-firewall",
            "log_config": [],
            "name": "app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/network-grafana-prometheus",
            "priority": 1000,
            "project": "metal-direction-333819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/firewalls/app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "app"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "9090",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-26T14:21:20.962-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metal-direction-333819/global/firewalls/monitoring-firewall",
            "log_config": [],
            "name": "monitoring-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/network-grafana-prometheus",
            "priority": 1000,
            "project": "metal-direction-333819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/firewalls/monitoring-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "monitoring"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20211209",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/disks/app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metal-direction-333819/zones/europe-central2-a/instances/app",
            "instance_id": "6713231455354704898",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bPgT71Ydl_w=",
            "name": "app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.93.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/network-grafana-prometheus",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/regions/europe-central2/subnetworks/network-grafana-prometheus",
                "subnetwork_project": "metal-direction-333819"
              }
            ],
            "project": "metal-direction-333819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/instances/app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app"
            ],
            "tags_fingerprint": "-ITvvbWD_xo=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_firewall.app",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prometheus_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20211209",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/disks/monitoring"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metal-direction-333819/zones/europe-central2-a/instances/monitoring",
            "instance_id": "8020879560526877698",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bPgT71Ydl_w=",
            "name": "monitoring",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.0.175",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/network-grafana-prometheus",
                "network_ip": "10.186.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/regions/europe-central2/subnetworks/network-grafana-prometheus",
                "subnetwork_project": "metal-direction-333819"
              }
            ],
            "project": "metal-direction-333819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/zones/europe-central2-a/instances/monitoring",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "monitoring"
            ],
            "tags_fingerprint": "KYs-bTO5BgQ=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_firewall.monitoring",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/metal-direction-333819/global/networks/network-grafana-prometheus",
            "mtu": 0,
            "name": "network-grafana-prometheus",
            "project": "metal-direction-333819",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metal-direction-333819/global/networks/network-grafana-prometheus"
          }
        }
      ]
    }
  ]
}